--- a/SensorMonitor.qrc
+++ b/SensorMonitor.qrc
@@ -43,5 +43,6 @@
         <file>gfx/Sensors/Sensor-15.png</file>
         <file>gfx/Sensors/Sensor-16.png</file>
         <file>icons/others_icons/swap_levels_32x32.png</file>
+        <file>icons/save_icons/export_html_icon_32x32.png</file>
     </qresource>
 </RCC>
